--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>ramona</title>
-  <link href="app.d10f91e3ecfeec131af6.css" rel="stylesheet"></head>
-  <body>
-  <script type="text/javascript" src="app.js"></script></body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="/ramona/favicon.ico"><title>React App</title><link href="/ramona/static/css/main.8c75c731.css" rel="stylesheet"></head><body><div id="root"></div><script type="text/javascript" src="/ramona/static/js/main.39d1231a.js"></script></body></html>
